--- a/chatroom/package.json
+++ b/chatroom/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
+    "react-day-picker": "^7.2.4",
     "react-dom": "^16.5.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "react-select": "^2.0.0",
+    "react-transition-group": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
