--- a/chatroom/package.json
+++ b/chatroom/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "concurrently": "^4.0.1",
     "express": "^4.16.3",
+    "immutable": "^3.8.2",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-day-picker": "^7.2.4",
@@ -15,10 +16,11 @@
     "react-select": "^2.0.0",
     "react-transition-group": "^1.2.1",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   },
   "scripts": {
-    "start":"react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
