--- a/chatroom/package.json
+++ b/chatroom/package.json
@@ -12,6 +12,7 @@
     "react-day-picker": "^7.2.4",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "react-select": "^2.0.0",
     "react-transition-group": "^1.2.1",
