--- a/chatroom/package.json
+++ b/chatroom/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "concurrently": "^4.0.1",
     "express": "^4.16.3",
+    "history": "^4.7.2",
     "immutable": "^3.8.2",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
@@ -13,6 +14,7 @@
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.5",
     "react-select": "^2.0.0",
     "react-transition-group": "^1.2.1",
